--- a/WpfApp8/MainWindow.xaml
+++ b/WpfApp8/MainWindow.xaml
@@ -94,22 +94,21 @@
                 <StackPanel>
                     <Label Content="ניהול ועריכה" Margin="11" FontSize="16" FontWeight="Bold" FontStyle="Italic" HorizontalAlignment="Center" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"></Label>
 
-                    <Button Content="הירשם כמנהל האתר"  Click="signIn" Margin="15,5,5,5" ></Button>
                     <Button Content="הוספת חייל לרשימה"  Click="Button_Click_1" Margin="15,5,5,5" ></Button>
                     <Button Content="עריכת פרטי חייל" Click="Button_Click_2" Margin="15,5,5,5" Padding="15,4,16,4"  ></Button>
                     <Button Content="הסרת חייל מהרשימה" Click="Button_Click_3" Margin="15,5,5,5" Padding="15,4,16,4"   ></Button>
 
 
                     <StackPanel Margin="5,5,5,5">
-                        <Expander
+                        <Expander 
                                 HorizontalAlignment="Stretch" Header="מנהלי האתר">
                             <StackPanel Orientation="Vertical" TextBlock.Foreground="{DynamicResource MaterialDesignBody}" Margin="24,8,24,16">
-                                <TextBlock
-                                        Text="מנהלי האתר:" />
-                                <TextBlock
+                                <TextBlock x:Name="deatal"
                                     Opacity=".68"
-                                    Text="מה לעזאזעאל."
+                                    Text="{Binding Path=deatales}"
                                     TextWrapping="Wrap" />
+                                <Button Content="עריכת פרופיל"  Click="signIn" FontSize="10" Margin="0,10,0,0"  ></Button>
+
                             </StackPanel>
                         </Expander>
                     </StackPanel>
